--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- カービィ画像 -->
   <div id="imageWrapper">
-    <img id="kirbyImage" src="images/kirby_pixel.jpg" alt="ポヨキャラ" />
+    <img id="kirbyImage" src="images/Kirby_pixel.jpg" alt="ポヨキャラ" />
   </div>
 
   <!-- ポヨ数＆ボタン -->
